increase memory sizes for compileTestJava, too